--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.pepivsky.loginfirebaseconkotlin"
-        minSdkVersion 22
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -53,5 +53,6 @@ dependencies {
     // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:19.0.0' //necesaria para loguear con cuenta de google
 
-    //implementation 'com.google.firebase:firebase-auth:19.2.0'
+    //dependencia de facebook para el inicio de sesion
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
