--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.gms.google-services'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -55,4 +56,7 @@ dependencies {
 
     //dependencia de facebook para el inicio de sesion
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
+    //firebase firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 }
