--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.3.2"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -59,4 +60,14 @@ dependencies {
 
     //firebase firestore
     implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    //navigation component
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //rounded progressbar
+    implementation 'com.akexorcist:round-corner-progress-bar:2.1.1'
+
+    //circleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
