--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginFirebaseConKotlin">
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".AuthActivity">
+        <activity android:name=".view.HomeActivity"></activity>
+        <activity android:name=".QuizzActivity"></activity>
+        <activity android:name=".view.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
