--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,8 @@ dependencies {
 
     //circleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //lottie
+    def lottieVersion = "3.6.1"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
